<resources>
    <string name="app_name">KMusic</string>
    <string name="aboutThis">About this</string>
    <string name="aboutThisDescription">Offline multi-format music player supporting a wide variety of audio file formats, including MP3, WAV, MIDI, APE, ALAC, AAC, FLAC, OGG, and more. Enjoy a personalized experience with a 10-band equalizer in the BASS version and a 5-band equalizer in the ExoPlayer version. Additionally, the app features a tool to edit ID3 tag metadata, allowing you to easily manage your song information in a convenient and efficient way.</string>
    <string name="accept">Accept</string>
    <string name="addFile">Add File</string>
    <string name="addToFavorite">Add to favorites</string>
    <string name="addedToPlaylist">Added to playlist</string>
    <string name="addPlayList">Create new playlist</string>
    <string name="album">Album</string>
    <string name="album_placeholder">Album</string>
    <string name="artist">Artist</string>
    <string name="artist_placeholder">Artist</string>
    <string name="bass">Bass</string>
    <string name="bluetoothPermissionMsg">This permission needs to be enabled so you can control the app through Bluetooth devices such as headphones and speakers.</string>
    <string name="cancel">Cancel</string>
    <string name="cantPlayMsg">Can\'t player this file, will be deleted or error format </string>
    <string name="callStatePhonePermissionMsg">This permission needs to be enabled to pause or resume the player during a call</string>
    <string name="classical">Classical</string>
    <string name="cover_view_style">Album cover art style</string>
    <string name="custom">Custom</string>
    <string name="default_title">Default</string>
    <string name="delete_all">Delete all tracks</string>
    <string name="delete_all_msg">Really wants to remove the entire list?</string>
    <string name="delete_song">Remove from list</string>
    <string name="delete_title">Delete</string>
    <string name="delete_track">Delete track</string>
    <string name="design">Design</string>
    <string name="develop">Develop</string>
    <string name="duration">Duration</string>
    <string name="dynamicTheme">Enable dynamic colors theme</string>
    <string name="editFileMsgError">The file could not be edited. Non-existent file or incompatible format</string>
    <string name="editFileSuccess">Edited successful</string>
    <string name="electronic">Electronic</string>
    <string name="empty">No lyric</string>
    <string name="enable_disc_style">Enable disc style</string>
    <string name="enableEffects">Enable effects</string>
    <string name="equalizer">Equalizer</string>
    <string name="favorite">Favorite</string>
    <string name="file_meta_info">%s Kbps</string>
    <string name="filter_playlist">Filter playlist</string>
    <string name="finish">Finish</string>
    <string name="flat">Flat</string>
    <string name="full_bass_amp_treble"><![CDATA[Full bass & Treble]]></string>
    <string name="full_sound">Full Sound</string>
    <string name="genre">Genre</string>
    <string name="goToAlbum">Go to album</string>
    <string name="granted">Enabled</string>
    <string name="grant">Enable</string>
    <string name="headphone">Headphone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="home">Home</string>
    <string name="jazz">Jazz</string>
    <string name="notifyPermissionMsg">Notifications permission needs to be enabled so the app can show you playback information and media controls in a message that you can easily interact with.</string>
    <string name="list">List</string>
    <string name="order_list_by">Order list by</string>
    <string name="play">Play</string>
    <string name="playlistCreatedMsg">Playlist created</string>
    <string name="pop">Pop</string>
    <string name="readMediaAudioMsg">The permission needs to be enabled so that you can add your device\'s directories and audio files to the list and play them.</string>
    <string name="reload_playlist">Reload playlist</string>
    <string name="reset">Reset</string>
    <string name="reverb">Reverb</string>
    <string name="rock">Rock</string>
    <string name="settings">Settings</string>
    <string name="sampleString">There is no track playing right now</string>
    <string name="sendToList">Send to playlist</string>
    <string name="songs">Songs</string>
    <string name="songInfo">File info</string>
    <string name="soundEffects">Sound effects</string>
    <string name="shuffle">Shuffle</string>
    <string name="themeSection">Theme</string>
    <string name="themeMsg">Enable dark theme</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="volume">Volume</string>
    <string name="writeExternalStorageMsg">Write External storage permission needs to be enabled to write metadata and audio tags when using the tag editor on your songs</string>
    <string name="manageExternalStorageMsg">The Manage External Storage permission needs to be enabled so the app can properly access all audio formats on your device. This permission allows the app to locate and play all your music without limitations.</string>
    <string name="welcomeToApp">Welcome to </string>
    <string name="share_song">Share song</string>
    <string name="share_song_with">Share song with…</string>
    <string name="BASS_ERROR_MEM">Memory error</string>
    <string name="BASS_ERROR_FILEOPEN">Cannot open the file</string>
    <string name="BASS_ERROR_DRIVER">Cannot find a valid driver</string>
    <string name="BASS_ERROR_BUFLOST">Buffer lost</string>
    <string name="BASS_ERROR_HANDLE">Invalid handle</string>
    <string name="BASS_ERROR_FORMAT">Unsupported sample format</string>
    <string name="BASS_ERROR_POSITION">Invalid position</string>
    <string name="BASS_ERROR_INIT">BASS not initialized</string>
    <string name="BASS_ERROR_START">BASS_Start has not been called</string>
    <string name="BASS_ERROR_ALREADY">Already initialized</string>
    <string name="BASS_ERROR_NOTAUDIO">Not an audio file</string>
    <string name="BASS_ERROR_NOCHAN">No free channel available</string>
    <string name="BASS_ERROR_ILLTYPE">Illegal type</string>
    <string name="BASS_ERROR_ILLPARAM">Illegal parameter</string>
    <string name="BASS_ERROR_NO3D">No 3D support</string>
    <string name="BASS_ERROR_NOEAX">No EAX support</string>
    <string name="BASS_ERROR_DEVICE">Invalid device</string>
    <string name="BASS_ERROR_NOPLAY">The channel is not playing</string>
    <string name="BASS_ERROR_FREQ">Illegal frequency</string>
    <string name="BASS_ERROR_NOTFILE">Not a (streamable) file</string>
    <string name="BASS_ERROR_NOHW">No hardware support</string>
    <string name="BASS_ERROR_EMPTY">Empty file</string>
    <string name="BASS_ERROR_NONET">No internet/network connection</string>
    <string name="BASS_ERROR_CREATE">Can\'t create the object</string>
    <string name="BASS_ERROR_NOFX">Effects not available</string>
    <string name="BASS_ERROR_NOTAVAIL">Not available</string>
    <string name="BASS_ERROR_DECODE">The channel is a decoding channel only</string>
    <string name="BASS_ERROR_DX">DirectX resources unavailable</string>
    <string name="BASS_ERROR_TIMEOUT">Timeout</string>
    <string name="BASS_ERROR_FILEFORM">Unsupported or invalid file format</string>
    <string name="BASS_ERROR_SPEAKER">Invalid speaker</string>
    <string name="BASS_ERROR_VERSION">Invalid BASS version</string>
    <string name="BASS_ERROR_CODEC">Codec not available</string>
    <string name="BASS_ERROR_ENDED">The channel has ended</string>
    <string name="BASS_ERROR_BUSY">Device or resource busy</string>
    <string name="BASS_ERROR_UNSTREAMABLE">Unstreamable file</string>
    <string name="BASS_ERROR_PROTOCOL">Unsupported protocol</string>
    <string name="BASS_ERROR_DENIED">Access denied</string>
    <string name="BASS_ERROR_FREEING">Being freed</string>
    <string name="BASS_ERROR_CANCEL">Cancelled</string>
    <string name="BASS_ERROR_JAVA_CLASS">Object class problem</string>
    <string name="UNKNOWN_ERROR">Unknown BASS error code</string>
    <string name="button_song_options">Song options</string>
</resources>