<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

     <PreferenceCategory app:title="@string/themeSection">

        <SwitchPreferenceCompat
            app:key="themeKey"
            app:defaultValue="false"
            app:widgetLayout="@layout/material_switch_layout"
            app:title="@string/themeMsg" />
         <SwitchPreferenceCompat
             app:key="materialTheme"
             app:defaultValue="false"
             app:singleLineTitle="false"
             app:widgetLayout="@layout/material_switch_layout"
             app:title="@string/dynamicTheme" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/cover_view_style">
        <SwitchPreferenceCompat
            app:key="coverStyle"
            app:defaultValue="false"
            app:widgetLayout="@layout/material_switch_layout"
            app:singleLineTitle="false"
            app:title="@string/enable_disc_style"
            />
    </PreferenceCategory>
</PreferenceScreen>