<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:checkable="true"

        />
    <item android:id="@+id/music_list"
        android:icon="@drawable/ic_music_list"
        android:title="@string/list"
        android:checkable="true"
        />
    <item android:id="@+id/equalizer"
        android:icon="@drawable/ic_tune"
        android:title="@string/soundEffects"
        android:checkable="true"
        />
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:checkable="true"
        />

</menu>