<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnContentMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendToList"
        android:ellipsize="end"
        style="@style/Widget.Material3.Button.TextButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_song"
        style="@style/Widget.Material3.Button.TextButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        style="@style/Widget.Material3.Button.TextButton"/>


</LinearLayout>