<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.MainPermissionsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlOldPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvReadStorageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Read external storage"
            tools:maxLines="4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvReadStoragePermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/readMediaAudioMsg"
            tools:maxLines="4"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReadStorageTitle"
            app:layout_constraintEnd_toStartOf="@id/btnReadStoragePermission"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReadStoragePermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:tag="android.permission.READ_EXTERNAL_STORAGE"
            app:cornerRadius="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvReadStoragePermission"
            app:layout_constraintBottom_toBottomOf="@id/tvReadStoragePermission"
            app:layout_constraintStart_toEndOf="@id/tvReadStoragePermission"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWriteStorageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Write external storage"
            tools:maxLines="5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReadStoragePermission"

            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWriteStoragePermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/writeExternaStorageMsg"
            tools:maxLines="4"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteStorageTitle"
            app:layout_constraintEnd_toStartOf="@id/btnWriteStoragePermission"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWriteStoragePermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:tag="android.permission.WRITE_EXTERNAL_STORAGE"
            app:cornerRadius="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvWriteStoragePermission"
            app:layout_constraintBottom_toBottomOf="@id/tvWriteStoragePermission"
            app:layout_constraintStart_toEndOf="@id/tvWriteStoragePermission"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlLatestPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctlOldPermissions"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNotifyPermissionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Notify permission"
            tools:maxLines="5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReadMediaPermission"

            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNotifyPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notifyPermissionMsg"
            tools:maxLines="4"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotifyPermissionTitle"
            app:layout_constraintEnd_toStartOf="@id/btnNotifyPermission"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNotifyPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:tag="android.permission.POST_NOTIFICATIONS"
            app:cornerRadius="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvNotifyPermission"
            app:layout_constraintBottom_toBottomOf="@id/tvNotifyPermission"
            app:layout_constraintStart_toEndOf="@id/tvNotifyPermission"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Bluetooth permission"
            tools:maxLines="5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotifyPermission"

            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBtPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothPermissionMsg"
            tools:maxLines="4"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBtTitle"
            app:layout_constraintEnd_toStartOf="@id/btnBtPermission"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBtPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:tag="android.permission.BLUETOOTH_CONNECT"
            app:cornerRadius="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvBtPermission"
            app:layout_constraintBottom_toBottomOf="@id/tvBtPermission"
            app:layout_constraintStart_toEndOf="@id/tvBtPermission"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvReadMediaTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Read media audio"
            tools:maxLines="4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvReadMediaPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/readMediaAudioMsg"
            tools:maxLines="4"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReadMediaTitle"
            app:layout_constraintEnd_toStartOf="@id/btnReadMediaPermission"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReadMediaPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:tag="android.permission.READ_MEDIA_AUDIO"
            app:cornerRadius="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvReadMediaPermission"
            app:layout_constraintBottom_toBottomOf="@id/tvReadMediaPermission"
            app:layout_constraintStart_toEndOf="@id/tvReadMediaPermission"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:tag="android.permission.READ_MEDIA_AUDIO"
        app:cornerRadius="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>